src/pages/BlogDetails/BlogDetails.scss
@import "../../styles/styles.scss";

.wrapper {

    @include minMedium {

        display: grid;
        grid-template-columns: 1fr 3fr;    
        margin-top: 40px;

    }
    
}

.article {

    padding: 0 1rem;

    @include minMedium {
    
        grid-column: 2;

    }

    &-info {
        
        padding: 0 1rem;
        display: grid;
        margin-top: 80px;

        @include minMedium {

            grid-column: 2;
            margin-top: 0;

        }

        &-date {

            color: $color_main__blue;

        }

        &-img {

            width: 100%;

        }

    }

    &-snippet {
    
        margin: 30px 0;

    }

}



.author {

    margin: 0 1rem;
    display: flex;
    align-items: center;
    height: 86px;
    background-color: #F6F6F6;

    @include minMedium {

        grid-column: 1;
        grid-row: 1;

    }

    &-wrapper {

        display: flex;
        width: 100%;
        height: 50px;
        padding: 0 10px;

    }

    &-photo {

        width: 50px;
        height: 50px;
        margin-right: 10px;
        border-radius: 50%;

    }

    &-info {

        display: flex;
        flex-direction: column;
        justify-content: space-evenly;

    }

    &-name {

        font-size: rem(14);
        font-weight: bold;

    }

    &-title {

        font-size: rem(14);
        
    }

}

.quote {
    
    display: flex;
    background-color: #E1EDF9;
    padding: 15px;


    &-sign {

        align-self: flex-start;
        margin-right: 10px;
        object-fit: contain;
        background-size: contain;
        background-repeat: no-repeat;

    }

}

#company-video {

    width: 100%;
    
}

hr {

    height: 1px;
    background-color: #BACCDE;
    border: none;
    margin-bottom: 30px;

    @include minMedium {

            display: none;

    }

}

.social {

    padding: 0 1rem;

    @include minMedium {

        grid-column: 1;
        grid-row: 1;
        margin-top: 125px;

    }

    &-title {

        color: #7D8893;

    }

    &-icons {

        width: 100%;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        row-gap: 12px;
        column-gap: 10px;
        margin: 24px 0;

        @include minLarge {

            grid-template-columns: repeat(6, 1fr);
            column-gap: 0;
        
        }

        &-wrapper {

            height: 40px;
            display: grid;
            justify-content: center;
            align-content: center;
            width: 100%;
            background-color: #F6F6F6;

            @include minLarge {

                height: auto;
                justify-content: start;
                background-color: white;

            }

        }

    }

}

.recommended {

    margin-bottom: 50px;
    padding: 0 1rem;

    @include minMedium {
    
        grid-row: 1;
        grid-column: 1;
        margin: 300px 0 0 0;    

    }

    @include minLarge {

        margin-top: 240px;

    }

    &-title {
        
        margin: 24px 0;
        color: #7D8893; 

        &::before {
            
            content: "In This Case Study"
        
        }

        &::before {

            @include minMedium {

                content: "Recommended"

            }

        }

    }

    &-container {
     
        display: grid;
        column-gap: 12px;
        grid-template-columns: repeat(2, 1fr);
        margin-top: 24px;
        
    }

    &-article {

        &:nth-child(1) {

            @include minMedium {

                grid-column: span 2;

            }
        
        }
        
        &:nth-last-child(1) {
        
            @include minMedium {
    
                display: none;
    
            }
    
        }

    }
}

#triangle-container {

    grid-column: span 2;
    margin-top: 100px;
    position: relative;

}

.latest-blog {

    display: none;
    
    @include minLarge {

        margin-top: 60px;
        display: block;

    }

    &-title {

        color: #ffffff80;

    }

    &-container {

        background-color: $color_main__text;
        color: white;

        &-inside {

            
            padding: 0 1rem;
        }

    }

    &-header {

        margin: 24px 0 45px 0;
        display: flex;
        justify-content: space-between;

        &-title {

            font-size: 24px;
            font-weight: bold;
            align-self: center;

        }

    }

    &-blogs {

        display: grid;
        grid-template-columns: repeat(4, 1fr);
        column-gap: 30px;
        padding-bottom: 140px;

    }

}

#footer-triangle {

    @include minLarge {

        display: none;

    }

}

